Added a new introduction and css style

--- a/introduction index.html
+++ b/introduction index.html
@@ -6,18 +6,19 @@
 </head>
 <body>
 
-<h1>Personal Profile Web page </h1>
+<h1 class="center">Personal Profile Web page </h1>
 <p>
 
 About Me<br>
- ( Do not include birthdate / age / contact information)<br>
+Name: Laeticia Nicole S. Delos Reyes <br>
+Nickname: Nikki <br>
 Education / Achievements<br>
-Course <br>
-IT Experience<br>
-Hobbies & Interests<br>
-Goals In Life / Dream<br>
+Course: Bachelor of Science in Information Technology <br>
+IT Experience: Programming like HTML, CSS, Python & Java and Gaming <br>
+Hobbies & Interests: Theater Acting, Reading books, Listening to music, Watching movies and TV Series <br>
+Goals In Life / Dream: My dream is to become a Programmer and to graduate with honors <br>
 Picture Gallery<br>
-<img src="https://www.w3schools.com/html/img_girl.jpg" alt="Girl with a jacket" width="500" height="600">
+<img src="https://images-cdn.ubuy.com.kz/66bbf9571f244555f568ebb4-once-upon-a-broken-heart-series-3-books.jpg" alt="Once Upon a Broken Heart Series" width="500" height="600">
 </p>
   
 </body>
