--- a/introduction index.html
+++ b/introduction index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="css/mystyle.css">
-<title>WEBPROG IT242 Introduction</title>
+<title>Nikki's Personal Profile Web Page</title>
 </head>
 <body>
 
@@ -14,9 +14,15 @@ Name: Laeticia Nicole S. Delos Reyes <br>
 Nickname: Nikki <br>
 Education / Achievements<br>
 Course: Bachelor of Science in Information Technology <br>
-IT Experience: Programming like HTML, CSS, Python & Java and Gaming <br>
-Hobbies & Interests: Theater Acting, Reading books, Listening to music, Watching movies and TV Series <br>
-Goals In Life / Dream: My dream is to become a Programmer and to graduate with honors <br>
+IT Experience: <br>
+Programming: HTML, CSS, Python & Java <br>
+Designing: Figma <br>
+Application Platform: Outsystems Service Studio <br>
+Designing: MySQL Workbench <br>
+Online Gaming: Mobile <br>
+Hobbies & Interests: <br>
+Theater Acting, Reading books, Listening to music, Watching movies and TV Series <br>
+Goals In Life/Dream: My dream is to become a Programmer and to graduate with honors <br>
 Picture Gallery<br>
 <img src="https://images-cdn.ubuy.com.kz/66bbf9571f244555f568ebb4-once-upon-a-broken-heart-series-3-books.jpg" alt="Once Upon a Broken Heart Series" width="500" height="600">
 </p>
