Added Flexbox CSS

--- a/introduction index.html
+++ b/introduction index.html
@@ -26,6 +26,19 @@ Goals In Life/Dream: My dream is to become a Programmer and to graduate with hon
 Picture Gallery<br>
 <img src="https://images-cdn.ubuy.com.kz/66bbf9571f244555f568ebb4-once-upon-a-broken-heart-series-3-books.jpg" alt="Once Upon a Broken Heart Series" width="500" height="600">
 </p>
+
+<div class="container">
+  <div>1</div>
+  <div>2</div>
+  <div>3</div>  
+  <div>4</div>
+  <div>5</div>
+  <div>6</div>  
+  <div>7</div>
+  <div>8</div>
+  <div>9</div>  
+</div>
+
   
 </body>
 </html>
