Edited introduction index.html

--- a/introduction index.html
+++ b/introduction index.html
@@ -27,6 +27,16 @@ Picture Gallery<br>
 <img src="https://images-cdn.ubuy.com.kz/66bbf9571f244555f568ebb4-once-upon-a-broken-heart-series-3-books.jpg" alt="Once Upon a Broken Heart Series" width="500" height="600">
 </p>
 
+@media screen and (max-width: 700px) {
+  .container, .navbar {   
+    flex-direction: column;
+  }
+}
+</style>
+</head>
+<body>
+
+<!-- Note -->
 <div style="background:purple;padding:5px;text-align:center;">
   <h4>Resize the browser window to see the responsive effect.</h4>
 </div>
