--- a/introduction index.html
+++ b/introduction index.html
@@ -27,66 +27,12 @@ Picture Gallery<br>
 <img src="https://images-cdn.ubuy.com.kz/66bbf9571f244555f568ebb4-once-upon-a-broken-heart-series-3-books.jpg" alt="Once Upon a Broken Heart Series" width="500" height="600">
 </p>
 
-@media screen and (max-width: 700px) {
-  .container, .navbar {   
-    flex-direction: column;
-  }
-}
-</style>
-</head>
-<body>
-
-<!-- Note -->
-<div style="background:purple;padding:5px;text-align:center;">
-  <h4>Resize the browser window to see the responsive effect.</h4>
-</div>
-
-<!-- Header -->
-<header>
-  <h1>My Website</h1>
-  <p>With a <b>flexible</b> layout.</p>
-</header>
-
-<!-- Navigation Bar -->
-<div class="navbar">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-</div>
-
-<!-- Content Container -->
 <div class="container">
-  <div class="side">
-    <h2>About Me</h2>
-    <h5>Photo of me:</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    <h3>More Text</h3>
-    <p>Lorem ipsum dolor sit ame.</p>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div>
-  </div>
-  <div class="main">
-    <h2>TITLE HEADING</h2>
-    <h5>Title description, Oct 7, 2025</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-    <br>
-    <h2>TITLE HEADING</h2>
-    <h5>Title description, Sep 2, 2025</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-  </div>
+  <div>1</div>
+  <div>2</div>
+  <div style="flex-basis:250px">3</div>
+  <div>4</div>
 </div>
-
-<!-- Footer -->
-<footer>
-  <h2>Footer</h2>
-</footer>
   
 </body>
 </html>
