Added introduction index.html

--- a/introduction index.html
+++ b/introduction index.html
@@ -28,10 +28,9 @@ Picture Gallery<br>
 </p>
 
 <div class="container">
-  <div>1</div>
-  <div>2</div>
-  <div style="flex-basis:250px">3</div>
-  <div>4</div>
+  <div><img src="https://www.shutterstock.com/image-vector/cute-little-smart-girl-sitting-600nw-2296810981.jpg" alt="Girl reading a book" width="200" height="200" /></div>
+  <div><img src="https://img.lazcdn.com/g/ff/kf/S9cedb3d7ec284c3ca4968772dba5a032O.jpg_720x720q80.jpg" alt="Powerless Trilogy" width="200" height="200" /></div>
+  <div><img src="https://www.thebookbundle.com/cdn/shop/files/1_41972029-72a3-4e1c-b02c-e2bf3c0bd5cc_700x700.jpg?v=1729783595" alt="Better than the Movies Series" width="200" height="200" /></div>
 </div>
   
 </body>
