--- a/introduction index.html
+++ b/introduction index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="css/css-grid.css?version0.1">
+<link rel="stylesheet" href="css/css-grid.css?version=0.1">   
 <title>Nikki's Personal Profile Web Page</title>
 </head>
 <body>
@@ -33,7 +33,7 @@ Picture Gallery<br>
   <div>3</div>  
   <div>4</div>
   <div>5</div>
-  <div>6</div>
+  <div>6</div>  
 </div>
 
 </body>
